--- a/index.html
+++ b/index.html
@@ -75,14 +75,16 @@
 				</div>
 				<div class="hd-select">
 					<select>
-						<option value="#">EN</option>
+						<option value="#">ENG</option>
 						<option value="#">ARB</option>
 						<option value="#">ESP</option>
 					</select>
 				</div>
 				<div class="cta-btn">
-					<a href="#">Get a Quote</a>
-					<i><img src="assets/img/icon/ic1.svg" alt=""></i>
+					<a href="#">
+						<span>Get a Quote</span>
+						<i><img src="assets/img/icon/ic1.svg" alt=""></i>
+					</a>
 				</div>
 				<div class="offcanvas-trigger navSidebar-button">
 					<button>
@@ -97,6 +99,13 @@
 						<span></span>
 					</button>
 				</div>
+				<div class="st-mobile-menu-btn mobile_menu_button open_mobile_menu">
+					<button>
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -105,10 +114,368 @@
 
 <!-- Start of Hero section
 	============================================= -->
-	<section id="st-hero" class="st-hero-sec">
-		
+	<section id="st-hero" class="st-hero-sec position-relative over-hidden">
+		<div class="st-hero-slider">
+			<div class="swiper-wrapper">
+				<div class="swiper-slide">
+					<div class="st-hero-item position-relative">
+						<div class="item-img position-absolute img-cover"><img src="assets/img/hero/hr1.jpg" alt=""></div>
+						<div class="container">
+							<div class="st-hero-text headline pera-content">
+								<h1 class="hero_text">Optimizing Supply Chains for a Smarter Tomorrow.</h1>
+								<p>Empowering businesses with efficient logistics, real-time visibility, and seamless supply chain solutions that driver.</p>
+								<div class="st-btn mt-35">
+									<a href="#">
+										<span>Get Started</span>
+										<i><img src="assets/img/icon/ic2.svg" alt=""></i>
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="st-hero-social">
+			<div class="st-social">
+				<a class="st-social-link" href="#" aria-label="name">
+					<i class="fa-brands fa-facebook-f"></i>
+					<span class="text">facebook</span>
+				</a>
+				<a class="st-social-link" href="#" aria-label="name">
+					<i class="fa-brands fa-linkedin-in"></i>
+					<span class="text">linkedin</span>
+				</a>
+				<a class="st-social-link" href="#" aria-label="name">
+					<i class="fa-brands fa-x-twitter"></i>
+					<span class="text">twitter</span>
+				</a>
+				<a class="st-social-link" href="#" aria-label="name">
+					<i class="fa-brands fa-instagram"></i>
+					<span class="text">instagram</span>
+				</a>
+			</div>
+		</div>
+		<div class="st-hero-video over-hidden">
+			<div class="item-video img-cover">
+				<video autoplay="" muted="" loop="" playsinline="" preload="metadata"><source src="assets/img/01.mp4" type="video/mp4">
+				</video>
+			</div>
+			<div class="item-btn text-center">
+				<a href="#">Free Consulting</a>
+			</div>
+		</div>
 	</section>	
 <!-- End of Hero section
+	============================================= -->	
+
+
+<!-- Start of About section
+	============================================= -->
+	<section id="st-about" class="st-about-sec position-relative over-hidden">
+		<div class="at-ab1-img position-absolute"><img src="assets/img/about/ab2.png" alt=""></div>
+		<div class="at-ab2-img position-absolute"><img src="assets/img/about/ab1.png" alt=""></div>
+		<div class="at-ab3-img position-absolute"><img src="assets/img/about/map.png" alt=""></div>
+		<div class="container">
+			<div class="st-about-content">
+				<div class="st-about-text">
+					<div class="st-sec-title headline pera-content">
+						<div class="subtitle d-flex align-items-center">
+							<i><img src="assets/img/icon/ic3.svg" alt=""></i>
+							<span>About Us</span>
+							<i><img src="assets/img/icon/ic4.svg" alt=""></i>
+						</div>
+						<h2 class="sec_title">
+							Building Smarter, Stronger, 
+							and Sustainable Global Supply Chain Solutions.
+						</h2>
+					</div>
+					<div class="st-about-exp d-flex mt-65">
+						<div class="st-ab-exp headline pera-content">
+							<h3><span>24</span><sub>+</sub></h3>
+							<p>Delivering excellence through proven expertise.</p>
+						</div>
+						<div class="st-ab-desc pera-content">
+							<p class="desc1">We provide efficient, technology-driven supply chain solutions that optimize logistics, enhance transparency, and ensure global operational excellence.</p>
+							<p class="desc2">Our expert team leverages advanced technology, strategic partnerships, and data-driven insights to optimize logistics, reduce costs, and ensure seamless operations across global networks.</p>
+							<div class="st-btn ver_2 mt-30">
+								<a href="#">
+									<span>Know About Us</span>
+									<i><img src="assets/img/icon/ic5.svg" alt=""></i>
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- End of About section
+	============================================= -->	
+
+<!-- Start of Service section
+	============================================= -->
+	<section id="st-ser" class="st-ser-sec pt-105 pb-125">
+		<div class="container">
+			<div class="st-sec-title text-center headline pera-content">
+				<div class="subtitle d-flex justify-content-center align-items-center">
+					<i><img src="assets/img/icon/ic3.svg" alt=""></i>
+					<span>Our Services</span>
+					<i><img src="assets/img/icon/ic4.svg" alt=""></i>
+				</div>
+				<h2 class="sec_title">
+					Comprehensive Supply Chain Management Solutions
+				</h2>
+			</div>
+			<div class="st-ser-content mt-50">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="st-ser-item d-flex align-items-center">
+							<div class="item-text headline pera-content">
+								<h3><a href="#">Supply Chain Management</a></h3>
+								<p>Streamline your operations with integrated planning, execution, and performance analytics.</p>
+								<div class="st-btn ver_2 mt-70">
+									<a href="#">
+										<span>Read More</span>
+										<i><img src="assets/img/icon/ic10.svg" alt=""></i>
+									</a>
+								</div>
+							</div>
+							<div class="item-img">
+								<img src="assets/img/icon/ic6.png" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="st-ser-item d-flex align-items-center">
+							<div class="item-text headline pera-content">
+								<h3><a href="#">Logistics & Distribution</a></h3>
+								<p>End-to-end transportation and warehousing solutions for global and local networks.</p>
+								<div class="st-btn ver_2 mt-70">
+									<a href="#">
+										<span>Read More</span>
+										<i><img src="assets/img/icon/ic10.svg" alt=""></i>
+									</a>
+								</div>
+							</div>
+							<div class="item-img">
+								<img src="assets/img/icon/ic7.png" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="st-ser-item d-flex align-items-center">
+							<div class="item-text headline pera-content">
+								<h3><a href="#">Procurement Solutions</a></h3>
+								<p>Optimize sourcing and supplier relationships with smart procurement strategies.</p>
+								<div class="st-btn ver_2 mt-70">
+									<a href="#">
+										<span>Read More</span>
+										<i><img src="assets/img/icon/ic10.svg" alt=""></i>
+									</a>
+								</div>
+							</div>
+							<div class="item-img">
+								<img src="assets/img/icon/ic8.png" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="st-ser-item d-flex align-items-center">
+							<div class="item-text headline pera-content">
+								<h3><a href="#">Data & Analytics</a></h3>
+								<p>Unlock insights through AI-powered dashboards for data-driven decision-making.</p>
+								<div class="st-btn ver_2 mt-70">
+									<a href="#">
+										<span>Read More</span>
+										<i><img src="assets/img/icon/ic10.svg" alt=""></i>
+									</a>
+								</div>
+							</div>
+							<div class="item-img">
+								<img src="assets/img/icon/ic9.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="st-btn d-flex justify-content-center mt-45">
+					<a href="#">
+						<span>View All Services</span>
+						<i><img src="assets/img/icon/ic2.svg" alt=""></i>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- End of Service section
+	============================================= -->	
+
+
+<!-- Start of Solution section
+	============================================= -->
+	<section id="st-solution" class="st-solution-sec over-hidden pb-100 position-relative">
+		<span class="st-sol-img position-absolute"><img src="assets/img/about/sl.png" alt=""></span>
+		<div class="container">
+			<div class="st-solution-text">
+				<div class="st-sec-title headline pera-content">
+					<div class="subtitle d-flex align-items-center">
+						<i><img src="assets/img/icon/ic3.svg" alt=""></i>
+						<span>Statistics</span>
+						<i><img src="assets/img/icon/ic4.svg" alt=""></i>
+					</div>
+					<h2 class="sec_title">
+						Proven Performance Metrics Worldwide.
+					</h2>
+				</div>
+				<div class="st-solution-card-wrap pt-65 d-flex">
+					<div class="st-sol-card headline pera-content">
+						<h3><span>97</span><sub>%</sub></h3>
+						<p>Ensuring 
+						reliability through timely delivery.</p>
+					</div>
+					<div class="st-sol-card headline pera-content">
+						<h3><span>1.2</span><sub>+</sub></h3>
+						<p>Trusted by indus-tries worldwide partners.</p>
+					</div>
+					<div class="st-sol-card headline pera-content">
+						<h3><span>20</span><sub>+</sub></h3>
+						<p>Delivering excellence through decades expertise.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- End of Solution section
+	============================================= -->
+
+<!-- Start of Video section
+	============================================= -->
+	<section id="st-video" class="st-video-sec">
+		<div class="item-video img-cover">
+			<video autoplay="" muted="" loop="" playsinline="" preload="metadata"><source src="assets/img/01.mp4" type="video/mp4">
+			</video>
+		</div>
+	</section>		
+<!-- End of Video section
+	============================================= -->	
+
+
+<!-- Start of Sponsor section 
+	============================================= -->
+	<section id="st-spon" class="st-spon-sec pb-120">
+		<div class="st-spon-slider swiper-container">
+			<div class="swiper-wrapper">
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp1.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp2.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp3.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp4.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp5.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp6.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp7.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp8.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp4.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp5.svg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="swiper-slide">
+					<div class="st-cl-item">
+						<div class="item-img">
+							<img src="assets/img/sponsor/sp6.svg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- End of Sponsor section
+	============================================= -->	
+
+<!-- Start of Team section 
+	============================================= -->
+	<section id="st-team" class="st-team-sec">
+		<div class="container">
+			<div class="st-team-top flex-wrap d-flex align-items-end justify-content-between">
+				<div class="st-sec-title headline pera-content">
+					<div class="subtitle d-flex align-items-center">
+						<i><img src="assets/img/icon/ic3.svg" alt=""></i>
+						<span>Team Member</span>
+						<i><img src="assets/img/icon/ic4.svg" alt=""></i>
+					</div>
+					<h2 class="sec_title">
+						Meet Our Dedicated Supply Chain Experts Driving Global Success.
+					</h2>
+				</div>
+				<div class="team-desc pera-content">
+					<p>Our expert team leverages advanced technology, strategic partnerships, and data-driven insights to optimize logistics, reduce costs, and ensure seamless</p>
+					<div class="st-btn ver_2 mt-30">
+						<a href="#">
+							<span>View All Team</span>
+							<i><img src="assets/img/icon/ic5.svg" alt=""></i>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- End of Team section 
 	============================================= -->	
 
 
