--- a/index.html
+++ b/index.html
@@ -473,6 +473,192 @@
 					</div>
 				</div>
 			</div>
+			<div class="st-team-content mt-50">
+				<div class="st-team-thumb-area">
+					<div class="st-team-btn-wrap  tx-tab-btn ul-li">
+						<ul class="nav nav-tabs" id="mt-about-tab" role="tablist">
+							<li class="nav-item" role="presentation">
+								<div class="nav-link active" id="ft_tab_1" data-bs-toggle="tab" data-bs-target="#ft_1_1" role="tab">
+									<div class="st-team-btn">
+										<div class="item-img img-cover">
+											<img src="assets/img/team/tm1.png" alt="">
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="nav-item" role="presentation">
+								<div class="nav-link" id="ft_tab_2" data-bs-toggle="tab" data-bs-target="#ft_1_2" role="tab">
+									<div class="st-team-btn">
+										<div class="item-img img-cover">
+											<img src="assets/img/team/tm2.png" alt="">
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="nav-item" role="presentation">
+								<div class="nav-link" id="ft_tab_3" data-bs-toggle="tab" data-bs-target="#ft_1_3" role="tab">
+									<div class="st-team-btn">
+										<div class="item-img img-cover">
+											<img src="assets/img/team/tm3.png" alt="">
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="nav-item" role="presentation">
+								<div class="nav-link" id="ft_tab_4" data-bs-toggle="tab" data-bs-target="#ft_1_4" role="tab">
+									<div class="st-team-btn">
+										<div class="item-img img-cover">
+											<img src="assets/img/team/tm4.png" alt="">
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="nav-item" role="presentation">
+								<div class="nav-link" id="ft_tab_5" data-bs-toggle="tab" data-bs-target="#ft_1_5" role="tab">
+									<div class="st-team-btn">
+										<div class="item-img img-cover">
+											<img src="assets/img/team/tm5.png" alt="">
+										</div>
+									</div>
+								</div>
+							</li>
+							<li class="nav-item" role="presentation">
+								<div class="nav-link" id="ft_tab_6" data-bs-toggle="tab" data-bs-target="#ft_1_6" role="tab">
+									<div class="st-team-btn">
+										<div class="item-img img-cover">
+											<img src="assets/img/team/tm6.png" alt="">
+										</div>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+					<div class="st-team-tab-desc">
+						<div class="tab-content" id="myTabContent">
+							<div class="tab-pane show active animated fade" id="ft_1_1" role="tabpanel">
+								<div class="st-team-item position-relative">
+									<span class="tm-bg position-absolute img-cover"><img src="assets/img/team/tm-bg.jpg" alt=""></span>
+									<div class="item-img">
+										<img src="assets/img/team/tm1.png" alt="">
+									</div>
+									<div class="item-text d-flex justify-content-between align-items-center headline">
+										<div class="inner-text pl-25">
+											<h3 class="text-uppercase"><a href="#">Jacob Jones</a></h3>
+											<span>Deputy Manager, Ship Operation</span>
+										</div>
+										<div class="inner-social">
+											<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+											<a href="#"><i class="fa-brands fa-instagram"></i></a>
+											<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+											<a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="tab-pane  animated fade" id="ft_1_2" role="tabpanel">
+								<div class="st-team-item position-relative">
+									<span class="tm-bg position-absolute img-cover"><img src="assets/img/team/tm-bg.jpg" alt=""></span>
+									<div class="item-img">
+										<img src="assets/img/team/tm2.png" alt="">
+									</div>
+									<div class="item-text d-flex justify-content-between align-items-center headline">
+										<div class="inner-text pl-25">
+											<h3 class="text-uppercase"><a href="#">Jacob Jones</a></h3>
+											<span>Deputy Manager, Ship Operation</span>
+										</div>
+										<div class="inner-social">
+											<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+											<a href="#"><i class="fa-brands fa-instagram"></i></a>
+											<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+											<a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="tab-pane  animated fade" id="ft_1_3" role="tabpanel">
+								<div class="st-team-item position-relative">
+									<span class="tm-bg position-absolute img-cover"><img src="assets/img/team/tm-bg.jpg" alt=""></span>
+									<div class="item-img">
+										<img src="assets/img/team/tm3.png" alt="">
+									</div>
+									<div class="item-text d-flex justify-content-between align-items-center headline">
+										<div class="inner-text pl-25">
+											<h3 class="text-uppercase"><a href="#">Jacob Jones</a></h3>
+											<span>Deputy Manager, Ship Operation</span>
+										</div>
+										<div class="inner-social">
+											<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+											<a href="#"><i class="fa-brands fa-instagram"></i></a>
+											<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+											<a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="tab-pane  animated fade" id="ft_1_4" role="tabpanel">
+								<div class="st-team-item position-relative">
+									<span class="tm-bg position-absolute img-cover"><img src="assets/img/team/tm-bg.jpg" alt=""></span>
+									<div class="item-img">
+										<img src="assets/img/team/tm4.png" alt="">
+									</div>
+									<div class="item-text d-flex justify-content-between align-items-center headline">
+										<div class="inner-text pl-25">
+											<h3 class="text-uppercase"><a href="#">Jacob Jones</a></h3>
+											<span>Deputy Manager, Ship Operation</span>
+										</div>
+										<div class="inner-social">
+											<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+											<a href="#"><i class="fa-brands fa-instagram"></i></a>
+											<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+											<a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="tab-pane  animated fade" id="ft_1_5" role="tabpanel">
+								<div class="st-team-item position-relative">
+									<span class="tm-bg position-absolute img-cover"><img src="assets/img/team/tm-bg.jpg" alt=""></span>
+									<div class="item-img">
+										<img src="assets/img/team/tm5.png" alt="">
+									</div>
+									<div class="item-text d-flex justify-content-between align-items-center headline">
+										<div class="inner-text pl-25">
+											<h3 class="text-uppercase"><a href="#">Jacob Jones</a></h3>
+											<span>Deputy Manager, Ship Operation</span>
+										</div>
+										<div class="inner-social">
+											<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+											<a href="#"><i class="fa-brands fa-instagram"></i></a>
+											<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+											<a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="tab-pane  animated fade" id="ft_1_6" role="tabpanel">
+								<div class="st-team-item position-relative">
+									<span class="tm-bg position-absolute img-cover"><img src="assets/img/team/tm-bg.jpg" alt=""></span>
+									<div class="item-img">
+										<img src="assets/img/team/tm6.png" alt="">
+									</div>
+									<div class="item-text d-flex justify-content-between align-items-center headline">
+										<div class="inner-text pl-25">
+											<h3 class="text-uppercase"><a href="#">Jacob Jones</a></h3>
+											<span>Deputy Manager, Ship Operation</span>
+										</div>
+										<div class="inner-social">
+											<a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+											<a href="#"><i class="fa-brands fa-instagram"></i></a>
+											<a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+											<a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 <!-- End of Team section 
