--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   	<link rel="stylesheet" href="assets/css/animate.css">
   	<link rel="stylesheet" href="assets/css/swiper.min.css">
   	<link rel="stylesheet" href="assets/css/jquery-ui.css"> 
+  	<link rel="stylesheet" href="assets/css/jquery.mCustomScrollbar.min.css"> 
   	<link rel="stylesheet" href="assets/css/magnific-popup.css">
   	<link rel="stylesheet" href="assets/css/style.css">
   </head>
@@ -662,13 +663,209 @@
 		</div>
 	</section>
 <!-- End of Team section 
+	============================================= -->
+
+<!-- Start of Work Process section 
+	============================================= -->
+	<section id="st-wrkp" class="st-wrkp-sec pt-125">
+		<div class="st-sec-title text-center headline pera-content">
+			<div class="subtitle d-flex justify-content-center align-items-center">
+				<i><img src="assets/img/icon/ic3.svg" alt=""></i>
+				<span>Work Process</span>
+				<i><img src="assets/img/icon/ic4.svg" alt=""></i>
+			</div>
+			<h2 class="sec_title">
+				Our Streamlined Supply Chain Process Explained Clearly.
+			</h2>
+			<p>We simplify complex supply chains through smart planning, seamless execution, and continuous optimization for efficiency.</p>
+		</div>
+		<div class="st-wrkp-content d-flex mt-50">
+			<div class="st-wrkp-steps-wrap d-flex justify-content-center" data-background="assets/img/about/wp-bg.jpg">
+				<div class="content">
+					<div class="st-wrkp-item text-center">
+						<div class="inner-item">
+							<div class="item-serial">
+								01
+							</div>
+							<div class="item-text headline pera-content">
+								<h3>Analyze Needs</h3>
+								<p>We assess your supply chain challenges to design effective strategies.</p>
+							</div>
+							<div class="item-img img-cover">
+								<img src="assets/img/about/wp1.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="st-wrkp-item text-center">
+						<div class="inner-item">
+							<div class="item-serial">
+								02
+							</div>
+							<div class="item-text headline pera-content">
+								<h3>Plan Solutions</h3>
+								<p>Customized logistics and management plans tailored to your business goals.</p>
+							</div>
+							<div class="item-img img-cover">
+								<img src="assets/img/about/wp2.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="st-wrkp-item text-center">
+						<div class="inner-item">
+							<div class="item-serial">
+								03
+							</div>
+							<div class="item-text headline pera-content">
+								<h3>Execute Efficiently</h3>
+								<p>Implement seamless operations with real-time tracking & coordination.</p>
+							</div>
+							<div class="item-img img-cover">
+								<img src="assets/img/about/wp3.jpg" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="st-wrkp-item text-center">
+						<div class="inner-item">
+							<div class="item-serial">
+								04
+							</div>
+							<div class="item-text headline pera-content">
+								<h3>Optimize Continuously</h3>
+								<p>Monitor performance and improve efficiency through data-driven insights.</p>
+							</div>
+							<div class="item-img img-cover">
+								<img src="assets/img/about/wp4.jpg" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="st-wrkp-img">
+				<div class="item-img img-cover over-hidden"><img src="assets/img/about/wp5.jpg" alt=""></div>
+			</div>
+		</div>
+	</section>		
+<!-- End of  Work Process section 
 	============================================= -->	
+
+<!-- Start of Why choose section 
+	============================================= -->
+	<section id="st-wc" class="st-wc-sec pt-130 pb-130">
+		<div class="container">
+			<div class="st-wc-content d-flex">
+				<div class="st-wc-title">
+					<div class="st-sec-title headline pera-content">
+						<div class="subtitle  align-items-center">
+							<i><img src="assets/img/icon/ic3.svg" alt=""></i>
+							<span>Why Choose Us</span>
+							<i><img src="assets/img/icon/ic4.svg" alt=""></i>
+						</div>
+						<h2 class="sec_title">
+							Why Choose Subtruck Supply Chain Solutions
+						</h2>
+					</div>
+					<div class="wc-title-desc pera-content">
+						<p>Our expert team leverages advanced technology, strategic partnerships, and data-driven insights</p>
+						<div class="st-btn  mt-45">
+							<a href="#">
+								<span>View All Services</span>
+								<i><img src="assets/img/icon/ic2.svg" alt=""></i>
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="st-wc-img img-cover">
+					<img src="assets/img/about/wc1.jpg" alt="">
+				</div>
+				<div class="st-wc-list-area">
+					<div class="st-wc-list headline pera-content">
+						<h3>Advanced Technology</h3>
+						<p>We leverage cutting-edge technology and automation to enhance efficiency, visibility, and accuracy across every supply chain operation.</p>
+					</div>
+					<div class="st-wc-list headline pera-content">
+						<h3>Expert Team</h3>
+						<p>Our skilled professionals bring deep industry knowledge & experience to deliver reliable, customized supply chain solutions.</p>
+					</div>
+					<div class="st-wc-list headline pera-content">
+						<h3>Global Network</h3>
+						<p>We operate through an extensive global network ensuring smooth, efficient, and timely delivery across multiple regions worldwide.</p>
+					</div>
+					<div class="st-wc-list headline pera-content">
+						<h3>Sustainability</h3>
+						<p>We prioritize eco-friendly practices, reducing carbon footprint and promoting sustainable growth throughout our entire supply chain process.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<div class="st-scroller-wrap">
+		<div class="st-scroller over-hidden marquee-left headline text-uppercase">
+			<h2>Suptruck Supply Chain</h2>
+			<i><img src="assets/img/icon/ic11.png" alt=""></i>
+			<h2>Suptruck Supply Chain</h2>
+			<i><img src="assets/img/icon/ic11.png" alt=""></i>
+			<h2>Suptruck Supply Chain</h2>
+			<i><img src="assets/img/icon/ic11.png" alt=""></i>
+		</div>
+	</div>
+<!-- End of Why choose section 
+	============================================= -->
+
+<!-- Start of Testimonia section 
+	============================================= -->
+	<section id="st-testi" class="st-testi-sec">
+		<div class="st-testi-content pt-120 pb-120 position-relative">
+			<div class="st-testi-bg img-cover position-absolute"><img src="assets/img/team/testi-bg.jpg" alt=""></div>
+			<div class="st-sec-title text-center headline pera-content">
+				<div class="subtitle d-flex justify-content-center align-items-center">
+					<i><img src="assets/img/icon/ic3.svg" alt=""></i>
+					<span>Testimonials</span>
+					<i><img src="assets/img/icon/ic4.svg" alt=""></i>
+				</div>
+				<h2 class="sec_title">
+					What Our Clients Say About Our Supply Chain Expertise
+				</h2>
+			</div>
+			<div class="st-testi-slider-wrap">
+				<div class="st-testi-slider">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="st-testi-item d-flex">
+								<div class="item-img img-cover">
+									<img src="assets/img/team/tst1.png" alt="">
+								</div>
+								<div class="item-text headline ul-li pera-content">
+									<div class="inner-item">
+										<ul>
+											<li><i class="fa-solid fa-star"></i></li>
+											<li><i class="fa-solid fa-star"></i></li>
+											<li><i class="fa-solid fa-star"></i></li>
+											<li><i class="fa-solid fa-star"></i></li>
+											<li><i class="fa-solid fa-star"></i></li>
+										</ul>
+										<p>“Suptruck transformed our logistics network, improving efficiency, reducing costs, and ensuring timely deliveries across all operations.”</p>
+									</div>
+									<div class="item-auth">
+										<h3>Albert Flores</h3>
+										<span>Logistics Head, Global Retail Brand</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- End of Testimonia section 
+	============================================= -->
 
 
 	<!-- For Js Library -->
 	<script src="assets/js/jquery-3.7.0.min.js"></script>
 	<script src="assets/js/bootstrap.bundle.min.js"></script>
 	<script src="assets/js/swiper-bundle.min.js"></script>
+	<script src="assets/js/jquery.mCustomScrollbar.concat.min.js"></script>
 	<script src="assets/js/wow.min.js"></script>
 	<script src="assets/js/appear.js"></script>
 	<script src="assets/js/gsap.min.js"></script>
@@ -678,6 +875,7 @@
 	<script src="assets/js/imagesloaded.pkgd.min.js"></script>
 	<script src="assets/js/waypoints.min.js"></script>
 	<script src="assets/js/jqueryui.js"></script>
+	<script src="assets/js/jqueryui.js"></script>
 	<script src="assets/js/jquery.magnific-popup.min.js"></script>
 	<script src="assets/js/jquery.marquee.min.js"></script>
 	<script src="assets/js/lenis.min.js"></script>
@@ -686,5 +884,6 @@
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
 	<script src="assets/js/script.js"></script>
+
 </body>
 </html>     
