--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
 <!-- Start of Testimonia section 
 	============================================= -->
 	<section id="st-testi" class="st-testi-sec">
-		<div class="st-testi-content pt-120 pb-120 position-relative">
+		<div class="st-testi-content over-hidden pt-120 pb-120 position-relative">
 			<div class="st-testi-bg img-cover position-absolute"><img src="assets/img/team/testi-bg.jpg" alt=""></div>
 			<div class="st-sec-title text-center headline pera-content">
 				<div class="subtitle d-flex justify-content-center align-items-center">
@@ -826,28 +826,351 @@
 					What Our Clients Say About Our Supply Chain Expertise
 				</h2>
 			</div>
-			<div class="st-testi-slider-wrap">
-				<div class="st-testi-slider">
+			<div class="st-testi-slider-wrap mt-60">
+				<div class="st-testi-slider swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<div class="st-testi-item d-flex">
-								<div class="item-img img-cover">
-									<img src="assets/img/team/tst1.png" alt="">
-								</div>
-								<div class="item-text headline ul-li pera-content">
-									<div class="inner-item">
-										<ul>
-											<li><i class="fa-solid fa-star"></i></li>
-											<li><i class="fa-solid fa-star"></i></li>
-											<li><i class="fa-solid fa-star"></i></li>
-											<li><i class="fa-solid fa-star"></i></li>
-											<li><i class="fa-solid fa-star"></i></li>
-										</ul>
-										<p>“Suptruck transformed our logistics network, improving efficiency, reducing costs, and ensuring timely deliveries across all operations.”</p>
+							<div class="st-testi-item">
+								<div class="inner-wrap d-flex">
+									<div class="item-img img-cover">
+										<img src="assets/img/team/tst1.png" alt="">
 									</div>
-									<div class="item-auth">
-										<h3>Albert Flores</h3>
-										<span>Logistics Head, Global Retail Brand</span>
+									<div class="item-text headline ul-li pera-content">
+										<div class="inner-item">
+											<ul>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+											</ul>
+											<p>“Suptruck transformed our logistics network, improving efficiency, reducing costs, and ensuring timely deliveries across all operations.”</p>
+										</div>
+										<div class="item-auth">
+											<h3>Albert Flores</h3>
+											<span>Logistics Head, Global Retail Brand</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="st-testi-item">
+								<div class="inner-wrap d-flex">
+									<div class="item-img img-cover">
+										<img src="assets/img/team/tst2.png" alt="">
+									</div>
+									<div class="item-text headline ul-li pera-content">
+										<div class="inner-item">
+											<ul>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+											</ul>
+											<p>“Suptruck transformed our logistics network, improving efficiency, reducing costs, and ensuring timely deliveries across all operations.”</p>
+										</div>
+										<div class="item-auth">
+											<h3>Albert Flores</h3>
+											<span>Logistics Head, Global Retail Brand</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="st-testi-item">
+								<div class="inner-wrap d-flex">
+									<div class="item-img img-cover">
+										<img src="assets/img/team/tst3.png" alt="">
+									</div>
+									<div class="item-text headline ul-li pera-content">
+										<div class="inner-item">
+											<ul>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+											</ul>
+											<p>“Suptruck transformed our logistics network, improving efficiency, reducing costs, and ensuring timely deliveries across all operations.”</p>
+										</div>
+										<div class="item-auth">
+											<h3>Albert Flores</h3>
+											<span>Logistics Head, Global Retail Brand</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="st-testi-item">
+								<div class="inner-wrap d-flex">
+									<div class="item-img img-cover">
+										<img src="assets/img/team/tst1.png" alt="">
+									</div>
+									<div class="item-text headline ul-li pera-content">
+										<div class="inner-item">
+											<ul>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+												<li><i class="fa-solid fa-star"></i></li>
+											</ul>
+											<p>“Suptruck transformed our logistics network, improving efficiency, reducing costs, and ensuring timely deliveries across all operations.”</p>
+										</div>
+										<div class="item-auth">
+											<h3>Albert Flores</h3>
+											<span>Logistics Head, Global Retail Brand</span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="st-testi-pagi mt-30 d-flex justify-content-center"></div>
+			</div>
+		</div>
+	</section>
+<!-- End of Testimonia section 
+	============================================= -->
+
+<!-- Start of Blog section 
+	============================================= -->
+	<section id="st-blog" class="st-blog-sec pt-125">
+		<div class="container">
+			<div class="st-sec-title  headline pera-content">
+				<div class="subtitle d-flex  align-items-center">
+					<i><img src="assets/img/icon/ic3.svg" alt=""></i>
+					<span>Team Member</span>
+					<i><img src="assets/img/icon/ic4.svg" alt=""></i>
+				</div>
+				<h2 class="sec_title">
+					Insights and Innovations in Supply Chain Management.
+				</h2>
+			</div>
+			<div class="st-blog-content mt-50">
+				<div class="row">
+					<div class="col-lg-4 col-md-6">
+						<div class="st-blog-item">
+							<div class="item-img">
+								<img src="assets/img/blog/blg1.jpg">
+							</div>
+							<div class="item-text headline">
+								<div class="item-meta">
+									<span class="item_tag"><a href="#">Supply</a></span>
+									<a class="item_date" href="#"><i class="fa-solid fa-calendar"></i> October 16, 2025</a>
+								</div>
+								<h3 class="blg_title"><a href="#">How Automation Enhances Supply Chain Efficiency ...</a></h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="st-blog-item">
+							<div class="item-img">
+								<img src="assets/img/blog/blg2.jpg">
+							</div>
+							<div class="item-text headline">
+								<div class="item-meta">
+									<span class="item_tag"><a href="#">Supply</a></span>
+									<a class="item_date" href="#"><i class="fa-solid fa-calendar"></i> October 16, 2025</a>
+								</div>
+								<h3 class="blg_title"><a href="#">Sustainable Practices Shaping Modern Supply Chains ...</a></h3>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<div class="st-blog-item">
+							<div class="item-img">
+								<img src="assets/img/blog/blg3.jpg">
+							</div>
+							<div class="item-text headline">
+								<div class="item-meta">
+									<span class="item_tag"><a href="#">Supply</a></span>
+									<a class="item_date" href="#"><i class="fa-solid fa-calendar"></i> October 16, 2025</a>
+								</div>
+								<h3 class="blg_title"><a href="#">The Future of Smart Supply Chain Technology ...</a></h3>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="st-blog-more mt-40 position-relative">
+					<div class="st-blog-shape marquee-left">
+						<span><img src="assets/img/about/line-shape.svg" alt=""></span>
+						<span><img src="assets/img/about/line-shape.svg" alt=""></span>
+					</div>
+					<div class="st-btn d-flex justify-content-center">
+						<a href="#">
+							<span>View All Services</span>
+							<i><img src="assets/img/icon/ic2.svg" alt=""></i>
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>	
+<!-- End of Blog section 
+	============================================= -->	
+
+<!-- Start of Contact section 
+	============================================= -->
+	<section id="st-cont" class="st-cont-sec pt-110">
+		<div class="st-cont-marquee marquee-right">
+			<h2>Let’s Talk</h2>
+			<i class="fa-solid fa-arrow-right"></i>
+			<h2>Let’s Talk</h2>
+			<i class="fa-solid fa-arrow-right"></i>
+			<h2>Let’s Talk</h2>
+			<i class="fa-solid fa-arrow-right"></i>
+			<h2>Let’s Talk</h2>
+			<i class="fa-solid fa-arrow-right"></i>
+		</div>
+		<div class="st-cont-content pt-80 pb-130 position-relative">
+			<div class="st-cont-bg img-cover position-absolute"><img src="assets/img/about/cnt-bg.png" alt=""></div>
+			<div class="st-cont-form">
+				<form action="#" method="post">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="item-field">
+								<label>Full Name</label>
+								<input type="text" placeholder="Emma Markson">
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="item-field">
+								<label>Email Address</label>
+								<input type="email" placeholder="themexriver@gmail.com">
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="item-field">
+								<label>Message</label>
+								<textarea name="#" id="" placeholder="Leave us a message"></textarea>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="item-btn">
+								<button>
+									<span>Send Message</span>
+									<i><img src="assets/img/icon/ic2.svg" alt=""></i>
+								</button>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
+<!-- End of Contact section 
+	============================================= -->	
+
+<!-- Start of Footer section 
+	============================================= -->
+	<footer id="st-footer" class="st-footer-sec pt-125">
+		<div class="container">
+			<div class="lg-ft-widget-area pb-60 d-flex justify-content-between">
+				<div class="lg-ft-widget">
+					<div class="logo-widget">
+						<div class="brand-logo">
+							<a href="#"><img src="assets/img/logo/logo2.svg" alt=""></a>
+						</div> 
+					</div>
+				</div>
+				<div class="ed-footer6-widget-area">
+					<div class="ed-footer6-widget-cont position-relative d-flex justify-content-between">
+						<div class="ed-footer5-widget headline-6 ul-li-block">
+							<div class="menu-widget">
+								<h3 class="widget-title">Useful Links:</h3>
+								<ul class="ed-footer-1-menu">
+									<li class="dropdown">
+										<a href="#">Home</a>
+										<ul class="has-dropdown">
+											<li><a href="index.html">Home Page 1 </a></li>
+											<li><a href="index-2.html">Home Page 2 </a></li>
+											<li><a href="index-3.html">Home Page 3 </a></li>
+											<li><a href="index-4.html">Home Page 4 </a></li>
+										</ul>
+									</li>
+									<li><a href="#">About</a></li>
+									<li class="dropdown">
+										<a href="#">Pages</a>
+										<ul class="has-dropdown">
+											<li><a href="index.html">Inner Page One </a></li>
+											<li><a href="index-2.html">Inner Page Two </a></li>
+											<li><a href="index-3.html">Inner Page Three </a></li>
+											<li><a href="index-4.html">Inner Page Four </a></li>
+											<li><a href="index-5.html">Inner Page Five </a></li>
+											<li><a href="index-6.html">Inner Page Six </a></li>
+										</ul>
+									</li>
+									<li class="dropdown">
+										<a href="#">Projects</a>
+										<ul class="has-dropdown">
+											<li><a href="index.html">Course Page One </a></li>
+											<li><a href="index-2.html">Course Page Two </a></li>
+											<li><a href="index-3.html">Course Page Three </a></li>
+											<li><a href="index-4.html">Course Page Four </a></li>
+											<li><a href="index-5.html">Course Page Five </a></li>
+											<li><a href="index-6.html">Course Page Six </a></li>
+										</ul>
+									</li>
+									<li><a href="#">About</a></li>
+									<li><a href="#">Contact</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="ed-footer5-widget headline-6 ul-li-block">
+							<div class="menu-widget-2">
+								<h3 class="widget-title">Our Services:</h3>
+								<ul>
+									<li><a href="#">Land Transport</a></li>
+									<li><a href="#">Ocean Freight</a></li>
+									<li><a href="#">Rail Freight</a></li>
+									<li><a href="#">Warehousing</a></li>
+									<li><a href="#">Air Freight</a></li>
+									<li><a href="#">Road Transport</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="ed-footer5-widget headline-6 ul-li-block">
+							<div class="cta-widget">
+								<h3 class="widget-title">Get in Touch:</h3>
+								<div class="cta-info-wrap">
+									<div class="cta-info-item d-flex">
+										<div class="item-icon">
+											<i class="fa-solid fa-location-dot"></i>
+										</div>
+										<div class="item-text">
+											31 St Martin's Ln, London WC2N 4DD, United Kingdom
+										</div>
+									</div>
+									<div class="cta-info-item d-flex">
+										<div class="item-icon">
+											<i class="fa-solid fa-envelope"></i>
+										</div>
+										<div class="item-text">
+											info@forgexindustry.co.uk
+										</div>
+									</div>
+									<div class="cta-info-item d-flex">
+										<div class="item-icon">
+											<i class="fa-solid fa-phone"></i>
+										</div>
+										<div class="item-text">
+											+44 20 8980 9731
+										</div>
+									</div>
+									<div class="cta-info-item d-flex">
+										<div class="item-icon">
+											<i class="fa-solid fa-clock"></i>
+										</div>
+										<div class="item-text">
+											Mon - Fri 8:30 - 17:30
+											Sat - Sun off
+										</div>
 									</div>
 								</div>
 							</div>
@@ -856,9 +1179,10 @@
 				</div>
 			</div>
 		</div>
-	</section>
-<!-- End of Testimonia section 
-	============================================= -->
+	</div>
+</footer>
+<!-- End of Footer section 
+	============================================= -->	
 
 
 	<!-- For Js Library -->
